# kubevirt

./: .travis.yml  Jenkinsfile  Makefile  WORKSPACE  test  test.txt  windows-disk.yaml
cluster/examples/: vmi-ephemeral.yaml
cmd/container-disk-v2alpha/: BUILD.bazel  main.c
hack/: bazel-build-images.sh  bazel-build.sh  bazel-generate.sh  build-docker.sh
hack/builder/: Dockerfile
hack/kubevirt-builder/: Dockerfile
pkg/container-disk/: container-disk.go
pkg/virt-controller/services/: template.go
pkg/virt-launcher/virtwrap/api/: converter.go  defaults.go
staging/src/kubevirt.io/client-go/version/: def.bzl
tests/: utils.go  vm_test.go  vmi_configuration_test.go  vmi_lifecycle_test.go  vmi_networking_test.go  vmi_userdata_test.go
tests/reporter/: kubernetes.go
